--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <!-- Google tag (gtag.js) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arizonia&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Raleway&display=swap" rel="stylesheet">
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-7NXHF87QLG"
